--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -731,7 +731,7 @@ body {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-<<<<<<< HEAD
+
 .bg-white\/20 {
   background-color: rgb(255 255 255 / 0.2);
 }
@@ -743,7 +743,7 @@ body {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-=======
+}
 .bg-neutral-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(38 38 38 / var(--tw-bg-opacity));
@@ -772,7 +772,6 @@ body {
 .py-1\.5 {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
->>>>>>> 3716cba1f850f86b42786bbdca2cf913fc468632
 }
 
 .py-2 {
